# concepts_of_programming_languages

./: CMakeLists.txt  README.md  assembly_instruction.txt  byte_encoder.cpp
VM/: CMakeLists.txt  VM.cpp
assembler_tack/: README.md
assembler_tack/VM/: VM.cpp
assembler_tack/byte_encoder/: CMakeLists.txt  fibonacci.txt  input.txt
byte_encoder/: byte_encoder.cpp  func_input.txt  input.txt
exceptions_tack/: CMakeLists.txt  README.md  exceptions.h  main.cpp  test_container_throw.cpp  test_macros.cpp
